--- a/web/WEB-INF/jspf/header.jspf
+++ b/web/WEB-INF/jspf/header.jspf
@@ -1,19 +1,20 @@
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <header>
-    <h1>Bienvenue sur mon blog !</h1>
+   
     <ul>
-        <li><a href="<c:url value='/'/>">Accueil</a> </li>
+       
             <c:choose>
 
             <c:when test="${empty sessionScope.user}">
-                <li><a href="<c:url value='/connect'/>">Se connecter</a> </li>
-                <li><a href="<c:url value='/register'/>">S'inscrire</a> </li>
+                
                 </c:when>
 
             <c:otherwise>
-               
-                <li><a href="<c:url value='/profile'/>">Profile</a> </li>
-                <li><a href="<c:url value='/logout'/>">Déconnexion</a></li>
+                <li><a href="<c:url value='/event'/>">Organiser Un Event</a> </li>
+                <li><a href="<c:url value='/events'/>">Choisir Events</a> </li>
+                <li><a href="<c:url value='/formFood'/>">Liste De Food</a> </li>
+                 <li><a href="<c:url value='/showevents'/>">Voir Les Events</a> </li>
+                <li><a href="<c:url value='/logOut'/>">Déconnexion</a></li>
             </c:otherwise>
 
         </c:choose>
