--- a/web/WEB-INF/jspf/header.jspf
+++ b/web/WEB-INF/jspf/header.jspf
@@ -1,23 +1,39 @@
 <%@ taglib prefix="c" uri="http://java.sun.com/jsp/jstl/core" %>
 <header>
-   
-    <ul>
-       
+    <div>
+        <h1><img src="/../rsc/Image/pizza2.png" alt=""> Co Dinner</h1>
+    </div>
+    <div class="menu">
+        <ul>
+            <a href="<c:url value='/'/>">Accueil</a>
+            
             <c:choose>
 
-            <c:when test="${empty sessionScope.user}">
-                
+                <c:when test="${empty sessionScope.user}">
+                    <a href="<c:url value='/connect'/>">Connexion</a>
+                    <a href="<c:url value='/register'/>">Inscription</a>
                 </c:when>
 
-            <c:otherwise>
-                <li><a href="<c:url value='/event'/>">Organiser Un Event</a> </li>
-                <li><a href="<c:url value='/events'/>">Choisir Events</a> </li>
-                <li><a href="<c:url value='/formFood'/>">Liste De Food</a> </li>
-                 <li><a href="<c:url value='/showevents'/>">Voir Les Events</a> </li>
-                <li><a href="<c:url value='/logOut'/>">Déconnexion</a></li>
-            </c:otherwise>
+                <c:otherwise>
 
-        </c:choose>
-    </ul>
+                    <li><a href="<c:url value='/event'/>">Organiser Un Event</a> </li>
+                    <li><a href="<c:url value='/events'/>">Choisir Events</a> </li>
+                    <li><a href="<c:url value='/formFood'/>">Liste De Food</a> </li>
+                    <li><a href="<c:url value='/showevents'/>">Voir Les Events</a> </li>
+                    <li><a href="<c:url value='/logOut'/>">Déconnexion</a></li>
+                    </c:otherwise>
+
+            </c:choose>
+        </ul>
+    </div>
+          <div class="alert">${requestScope.msg}</div>  
 </header>
-<div class="alert">${requestScope.msg}</div>
+
+
+
+
+
+
+
+
+
